--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_Z29yZ2VvdXMtc3BvbmdlLTk2LmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_API_URL=https://back-projects-1.onrender.com
+# VITE_API_URL=http://localhost:3000
